# mlso

./: .copilot-instructions.md  .env.development  .env.production.example  .flake8  .gitignore  AI_INSTRUCTIONS_SUMMARY.md  CI_CD_IMPLEMENTATION_COMPLETE.md  DOCKER_API_WORKING.md  DOCKER_DAEMON_FIX.md  DOCKER_ERROR_FIXED.md  DOCKER_FIX.md  DOCKER_SUMMARY.md  Dockerfile  FINAL_STATUS.md  K8S_ACCESS_QUICK.md  K8S_DEPLOYMENT_SUCCESS.md  K8S_DOCKER_FIX_SUMMARY.md  K8S_HEALTH_NOT_AVAILABLE_FIXED.md  K8S_QUICKREF.md  K8S_TIMEOUT_FIXED.md  KUBERNETES_DEPLOYMENT.md  MINIKUBE_ACCESS_GUIDE.md  MINIKUBE_DOWNLOAD.md  QUICK_START.md  README.md  RENAME_QUICK_GUIDE.md  TRAINING_FIX.md  VERIFICATION_REPORT.md  deploy_k8s.sh  docker-compose.mlflow.yml  docker_start.sh  download_minikube.sh  get_k8s_url.sh  kubectl.sh  migrate_mlflow_runs.sh  mlflow-server-entrypoint.sh  model_evaluation_report.csv  model_evaluation_report.py  pyproject.toml  pytest.ini  (+12 more)
docs/: 20251224_111209_QUICK_START.md  20251224_112933_DOCKER_QUICKREF.md  20251224_113055_ALL_FIXES_SUMMARY.md  20251224_113654_K8S_SETUP_SUMMARY.md  20251224_115905_DOCKER_QUICK_FIX.md  20251224_120657_K8S_QUICK_START.md  20251226_105053_WHY_HEALTH_NOT_AVAILABLE.md  20251226_105728_CI_CD_DOCUMENTATION.md  20251226_110219_CI_CD_PIPELINE_SUMMARY.md  20251226_112406_CI_CD_QUICK_REFERENCE.md  20251226_143447_GIT_COMMIT_SUMMARY.md  20251226_175432_GITHUB_PIPELINE_SETUP_GUIDE.md  20251226_175432_QUICK_START_GITHUB.md  20251226_175432_SCREENSHOT_CHECKLIST.md  20251226_175500_PIPELINE_FLOW_DIAGRAM.md  20251228_084218_GIT_PUSH_FIX_SUMMARY.md  (+35 more)
(+34 files in other folders)
